name:                haskell-neo
version:             0.1.0.0
synopsis:            Talk to neo4j from haskell via rest.
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Neo
  -- other-modules:       
  hs-source-dirs:      src
  build-depends:       base,
                       haskell-rest,
                       errors,
                       aeson,
                       mtl,
                       transformers,
                       text,
                       bytestring
  default-language:    Haskell2010